# physics_oracle

./: .gitignore  README.md  ReadMe.md  pyproject.toml
case_template/: run.sh
case_template/0/: U  k  nut  omega  p  phi
case_template/constant/: airfoil_polygon.csv  momentumTransport  physicalProperties  transportProperties  turbulenceProperties
case_template/constant/polyMesh/: boundary  cellZones
case_template/system/: blockMeshDict  controlDict  fvSchemes  fvSolution  naca_airfoil.geo  single_cylinder.geo
configs/: openfoam.yaml
dataset/scripts/: build_ml_dataset.py  common.py  extract_fields.py  generate_c_mesh.py  generate_dataset.py  generate_geometry.py  generate_mesh.py  quality_check.py  run_openfoam.py  setup_openfoam_case.py
ood_analysis/: analyze_ood.py
scripts/: build_ml_dataset.py  diagnose_robustness.py  generate_dataset.py  prune_rejected.py
src/core/: __init__.py  case_spec.py  logging.py  paths.py  repro.py
src/geometry/: __init__.py  naca.py  sampling.py
src/meshing/: __init__.py  c_mesh.py  gmsh_mesh.py
src/openfoam_setup/: case_setup.py  extract.py  of_writer.py  qc.py  runner.py
src/physics_oracle/: __init__.py
src/physics_oracle/cli/: backfill_wall.py  build_ml_dataset.py  correct_sdf.py  generate_dataset.py  run_ml_initialized_step.py
src/physics_oracle/configs/: openfoam.yaml  postprocess.yaml
src/physics_oracle/core/: __init__.py  envelope.py  logging.py  paths.py
src/physics_oracle/geometry/: __init__.py  distance.py  naca.py  sampling.py
src/physics_oracle/meshing/: c_mesh.py  (+1 more)
utils/: visualize_npz.py
(+17 files in other folders)
