[project]
name = "cfd-data-generator"
version = "0.1.0"
description = "RANS k-omega SST dataset generator for 2D NACA airfoils"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "h5py>=3.10",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "gmsh>=4.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/geometry", "src/meshing", "src/openfoam_setup"]
