[project]
name = "physics-oracle"
version = "0.2.0"
description = "OpenFOAM-backed CFD oracle for NACA airfoils: dataset generation, ML warm-start, residual evaluation"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "h5py>=3.10",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "gmsh>=4.12",
    "torch>=2.0",
]

[project.scripts]
physics-oracle-generate = "physics_oracle.cli.generate_dataset:main"
physics-oracle-build-ml = "physics_oracle.cli.build_ml_dataset:main"
physics-oracle-run-step = "physics_oracle.cli.run_ml_initialized_step:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/physics_oracle"]
